# notif_service

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notification_service/: main.py
notification_service/internal/adapters/controllers/http/: __init__.py  email_notification.py
notification_service/internal/domain/models/: email_notification.py
notification_service/internal/interfaces/: email_notification.py
notification_service/internal/services/: email_notification.py
notification_service/middleware/: jwt.py
notification_service/server/: server.py
notification_service/server/routes/: __init__.py  routes.py
notification_service/settings/: __init__.py  settings.py
