[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Oleksii Zaichenko <oleksii@platops.com>"]
readme = "README.md"
packages = [{include = "notification_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
